--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@prisma/client": "^3.14.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1"
   }
